added code to access groq

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LLM Task Highlighter</title>
+  <title>LLM Highlighter</title>
 </head>
 <body>
-  <button id="fetch-instructions">Get Instructions</button>
+  <button id="btn-highlight">Get Steps & Highlight</button>
   <script src="popup.js"></script>
 </body>
 </html>
